Added User controller with create action
