# swagger/v1/swagger.yaml
@@ -13,8 +13,26 @@ paths:
       responses:
         '200':
           description: authentication successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    default: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxfQ.zCGBEiC4n4X5jij4lK4nSEtrbebYxELZ6OfBwdm6CJg
         '401':
           description: missing parameter (password or username) or they're wrong
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    default: 'param is missing or the value is empty: username'
+                required:
+                - error
       requestBody:
         content:
           application/json:
@@ -40,6 +58,65 @@ paths:
       responses:
         '204':
           description: user deauthenticated successfully
+  "/api/v1/signup":
+    post:
+      summary: Returns a token
+      tags:
+      - Signup
+      parameters: []
+      responses:
+        '201':
+          description: signup successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    default: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxfQ.zCGBEiC4n4X5jij4lK4nSEtrbebYxELZ6OfBwdm6CJg
+                required:
+                - token
+        '422':
+          description: missing or wrong parameter (probably validations)
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: object
+                    properties:
+                      password:
+                        type: array
+                        properties:
+                        - type: string
+                          default: can't be blank
+                      username:
+                        type: array
+                        properties:
+                        - type: string
+                          default: can't be blank
+                required:
+                - errors
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                user:
+                  type: object
+                  properties:
+                    username:
+                      type: string
+                      default: Student99
+                    password:
+                      type: string
+                      default: Password1
+                  required:
+                  - username
+                  - password
 servers:
 - url: http://{defaultHost}
   variables:
